// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render snapshot button if it's a snapshot 1`] = `
<div
  className="sc-bdnylx jgLzcD"
>
  <span />
  <div
    className="sc-gtssRu kHxNPn"
  >
    <span
      className="sc-dlnjPT fwctyl"
    />
  </div>
</div>
`;

exports[`shows snapshot url 1`] = `
<div
  className="sc-bdnylx jgLzcD"
>
  <span />
  <div
    className="sc-gtssRu kHxNPn"
  >
    <span
      className="sc-dlnjPT fwctyl"
    />
  </div>
  <button
    className="sc-iCoHVE djZFzL snapshotButton "
    onClick={[Function]}
  >
    <svg
      className="sc-fujyUd iwPzbl"
    >
      snapshot.svg
    </svg>
    <span>
      Create a 
      <br />
      Snapshot
    </span>
  </button>
</div>
`;
